--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>biblioteca</groupId>
-	<artifactId>fernando</artifactId>
+	<artifactId>felipe</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>fernando</name>
 	<description>Demo project for Spring Boot</description>
